# backend-template

./: .env.ci  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  er.dio  log_config.json  mypy.ini  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: cd-pipeline.yml  cd-pipeline.yml.example  ci-pipeline.yml  dependabot-automerge.yml
app/: config.py  util.py
app/dependencies/: auth.py  db.py  dependency_injector.py
app/domain/: constants.py
app/domain/entity/: common.py  organization.py  user.py  user_organization.py
app/domain/i_repository/: organization.py  s3.py  user.py  user_organization.py
app/infra/alembic/: env.py
app/infra/models/: __init__.py  base.py  organization.py  user.py  user_organization.py
app/router/: error_handler.py  healthcheck.py  main.py  organization.py  user.py  user_organization.py  util.py
app/usecase/: error.py  organization.py  user.py  user_organization.py
ecs/: task-definition-production.json  task-definition-staging.json
scripts/: init_data.py
tests/: common.py  conftest.py
tests/factories/: base.py  organization.py  user.py  user_organization.py
tests/keys/: private_test_key.pem  public_test_key.pem
tests/test_dependencies/: test_auth.py
tests/test_infra/: test_infra_aws_cognito.py  test_infra_aws_s3.py
tests/test_router/: test_router_organization.py  test_router_user.py  test_router_user_organization.py
tests/test_usecase/: test_user_organization_usecase.py  test_user_usecase.py
(+13 files in other folders)
